@@ -20,14 +20,17 @@
 require_once( 'class.phpmailer.php');
 require_once('configMail.php');
 
+
 function sendEmail($email, $subject, $body) {
   $mailObj = new PHPMailer;
 
   $mailObj->isSMTP();             // Set mailer to use SMTP.
-  $mailObj->Host = MAIL_HOST;     // Specify server.
+  $mailObj->Host = MAIL_HOST;     // Specify the SMTP server.
   $mailObj->Port = MAIL_PORT;     // Specify port. Use 587 for STARTTLS.
   $mailObj->SMTPAuth = true;      // Enable SMTP authentication
-  $mailObj->SMTPSecure = 'tls';
+  if (MAIL_TLS == 'Yes') {        // Is TLS required by the SMTP server?
+    $mailObj->SMTPSecure = 'tls';
+  }
   $mailObj->Username = MAIL_USER; // SMTP username.
   $mailObj->Password = MAIL_PASS; // SMTP password.
   $mailObj->setFrom(MAIL_SENDER,'BOARD18');
